--- a/CSS/common.css
+++ b/CSS/common.css
@@ -7,8 +7,8 @@ body {
 		Roboto,
 		Arial,
 		sans-serif;
-	background: #f6f7fb;
-	color: #111;
+	background: #fff;
+	color: #000;
 }
 
 .container {
