--- a/CSS/common.css
+++ b/CSS/common.css
@@ -21,7 +21,7 @@ body {
 
 .box {
 	background: #fff;
-	border: 1px solid #e6e8ef;
+	border: 1px solid #e8e9f0;
 	border-radius: 14px;
 	padding: 16px;
 }
