--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,13 +1,167 @@
 /* ==================
 	 태블릿 
 	=================== */
-@media (max-width: 768px) {
-	/* 코드작성 */
+/* 대시보드(통계)*/
+.summary {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 12px;
+}
+.stat {
+  padding: 12px;
+  display: flex;
+  gap: 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px dashed #d1d5db;
+  border-radius: 14px;
+  font-size: 20px;
+}
+.stat-line {
+  width: 70%;
+  height: 15px;
+  border-radius: 12px;
+  background-color: #8b7dff;
+  transform: scale(1);
+  transition: transform 0.4s ease-in-out;
+}
+.todoline {
+  background-color: #ff9fbe;
+}
+.progressline {
+  background-color: #7fe8cf;
+}
+.doneline {
+  background-color: #ffd0b2;
+}
+.achievementline {
+  background-color: #9fe6ff;
+}
+.stat-label {
+  font-size: 20px;
+  color: #666;
+  font-weight: 600;
+}
+.stat-line:hover {
+  transform: scale(1.1);
+}
+.stat-value {
+  font-size: 20px;
+  font-weight: 800;
+}
+/* 검색, 정렬 필터 */
+.sorting {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr auto;
+  gap: 12px;
+}
+.sort {
+  height: 40px;
+  padding-left: 5px;
+  border-radius: 24px;
+  border: 1px solid #e6e8ef;
+  font-size: 16px;
+}
+.search-wrap {
+  position: relative;
+}
+.search-wrap::after {
+  content: "🔍";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  left: 14px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.search {
+  width: 100%;
+  padding-left: 45px;
+  padding-right: 20px;
+}
+.search:focus::placeholder {
+  color: transparent;
+}
+.add-btn {
+  padding: 0 20px;
+  background-color: #8b7dff;
+  color: #fff;
+  transition: background-color 0.3s ease-in-out;
+}
+.add-btn:hover {
+  background-color: #7566f0;
+}
+
+@media (max-width: 1199px) {
+  /* 코드작성 */
+  /* 대시보드 통계 */
+  .summary {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .bot-left {
+    grid-column: 1;
+  }
+  .bot-right {
+    grid-column: 3;
+  }
+  .stat {
+    font-size: 18px;
+  }
+  .stat-line:hover {
+    transform: none;
+  }
+  .stat-line:active {
+    transform: scale(1.1);
+  }
+  /* 검색 필터 정렬 태블릿 */
+  .sorting {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .search-wrap {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+  .add-btn {
+    grid-column: 3/4;
+    grid-row: 1;
+  }
+  .select-filter,
+  .priority-filter,
+  .title-sort {
+    grid-row: 2;
+  }
+  .add-btn:hover {
+    background-color: none;
+  }
+  .add-btn:active {
+    background-color: #7566f0;
+  }
 }
 
 /* ==================
 	 모바일 
 	=================== */
-@media (max-width: 320px) {
-	/* 코드작성 */
+@media (max-width: 767px) {
+  /* 코드작성 */
+  /* 대시보드 통계 */
+  .summary {
+    grid-template-columns: 1fr;
+  }
+  .bot-left,
+  .bot-right {
+    grid-column: 1 / -1;
+  }
+  /* 검색 필터 정렬 태블릿 */
+  .sorting {
+    grid-template-columns: 1fr;
+  }
+  .search-wrap,
+  .add-btn,
+  .select-filter,
+  .priority-filter,
+  .title-sort {
+    grid-column: 1 / -1;
+    grid-row: auto;
+  }
 }
