--- a/CSS/board.css
+++ b/CSS/board.css
@@ -1,16 +1,23 @@
+.all-reset {
+	text-align: right;
+	color: #e45774;
+	font-weight: 600;
+	margin-right: 10px;
+}
+
 .board {
+	width: 100%;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 22px;
+	gap: 20px;
 }
 
 .todo-card,
 .progress-card,
 .done-card {
-	box-shadow: 0 10px 22px rgba(0, 0, 0, 0.12);
-	backdrop-filter: blur(8px);
 	height: 440px;
-	width: 360px;
+	overflow: auto;
+	scrollbar-width: none;
 }
 
 .card-head {
@@ -57,8 +64,18 @@
 	cursor: pointer;
 }
 
-/* 카드안쪽 */
+.done-card [class^="task-"] {
+	opacity: 0.3;
+}
+/* ============== 
+		카드안쪽
+============== */
 .task {
+	cursor: pointer;
+	margin-bottom: 10px;
+}
+/* 할일 높음 */
+.task-high {
 	position: relative;
 	border: 1px solid #4b2cff;
 	border-radius: 10px;
@@ -68,7 +85,7 @@
 	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
 }
 
-.task::before {
+.task-high::before {
 	content: "";
 	position: absolute;
 	top: 0;
@@ -78,7 +95,50 @@
 	background: #4b2cff;
 }
 
+/* 할일 중간 */
+.task-mid {
+	position: relative;
+	border: 1px solid #8b7dff;
+	border-radius: 10px;
+	padding: 12px 12px 10px;
+	position: relative;
+	overflow: hidden;
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
+}
+
+.task-mid::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 5px;
+	height: 100%;
+	background: #8b7dff;
+}
+
+/* 할일 낮음 */
+.task-low {
+	position: relative;
+	border: 1px solid #d7d0ff;
+	border-radius: 10px;
+	padding: 12px 12px 10px;
+	position: relative;
+	overflow: hidden;
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
+}
+
+.task-low::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 5px;
+	height: 100%;
+	background: #d7d0ff;
+}
+
 .task-top {
+	padding-bottom: 10px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -109,12 +169,12 @@
 }
 .task-title {
 	font-weight: 500;
-	font-size: 20px;
+	font-size: 16px;
 	margin: 0 0 6px;
 }
 .task-desc {
 	margin: 0 0 8px;
-	font-size: 15px;
+	font-size: 14px;
 	font-weight: 400;
 	color: #666;
 	line-height: 1.35;
