--- a/CSS/board.css
+++ b/CSS/board.css
@@ -1,8 +1,22 @@
 .all-reset {
-	text-align: right;
+	padding-right: 20px;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.btn-all-reset {
+	padding: 10px 14px;
+	border-radius: 10px;
+	border: none;
+	cursor: pointer;
+	background: rgba(228, 87, 116, 0.1);
 	color: #e45774;
 	font-weight: 600;
-	margin-right: 10px;
+	transition: background 0.15s ease;
+}
+
+.btn-all-reset:hover {
+	background: rgba(228, 87, 116, 0.3);
 }
 
 .board {
@@ -67,20 +81,39 @@
 .done-card [class^="task-"] {
 	opacity: 0.3;
 }
+
 /* ============== 
 		카드안쪽
 ============== */
 .task {
-	cursor: pointer;
 	margin-bottom: 10px;
+	cursor: pointer;
 }
+
+.task > p {
+	padding: 0 10px;
+}
+
+.task p:nth-of-type(1) {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.task p:nth-of-type(2) {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	line-clamp: 2; /* vscode 경고떠서 추가함 */
+	overflow: hidden;
+}
+
 /* 할일 높음 */
 .task-high {
 	position: relative;
 	border: 1px solid #4b2cff;
 	border-radius: 10px;
 	padding: 12px 12px 10px;
-	position: relative;
 	overflow: hidden;
 	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
 }
@@ -101,7 +134,6 @@
 	border: 1px solid #8b7dff;
 	border-radius: 10px;
 	padding: 12px 12px 10px;
-	position: relative;
 	overflow: hidden;
 	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
 }
@@ -122,7 +154,6 @@
 	border: 1px solid #d7d0ff;
 	border-radius: 10px;
 	padding: 12px 12px 10px;
-	position: relative;
 	overflow: hidden;
 	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
 }
@@ -138,6 +169,7 @@
 }
 
 .task-top {
+	padding-left: 10px;
 	padding-bottom: 10px;
 	display: flex;
 	align-items: center;
@@ -180,6 +212,7 @@
 	line-height: 1.35;
 }
 .task-date {
+	padding: 0 0 10px 10px;
 	font-size: 12px;
 	line-height: 1.2;
 	color: #888;
