게이지바-칸반 연동 및 다크모드 팝업 UI 통일

--- a/CSS/motivation.css
+++ b/CSS/motivation.css
@@ -129,11 +129,13 @@
     transform: translate(-50%, -75%); 
     z-index: 2;
     pointer-events: none;
+
+	transition: left 0.4s ease;
 }
 
 .progressCharImg {
-    width: 100px;      
-    height: 100px;
+    width: 80px;      
+    height: 80px;
     object-fit: contain;
     display: block;
 }
