--- a/CSS/common.css
+++ b/CSS/common.css
@@ -28,15 +28,29 @@ body {
 	border: 2px solid #eee7ff;
 	border-radius: 14px;
 	padding: 16px;
-    box-shadow: 0 16px 38px rgba(20, 16, 40, .08);
-    
-    transition: transform 0.16s ease, 
-                box-shadow 0.16s ease, 
-                border-color 0.16s ease;
+	box-shadow: 0 16px 38px rgba(20, 16, 40, 0.08);
+
+	transition:
+		transform 0.16s ease,
+		box-shadow 0.16s ease,
+		border-color 0.16s ease;
 }
 
 .box:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(20, 16, 40, 0.15);
+	transform: translateY(-5px);
+	box-shadow: 0 10px 20px rgba(20, 16, 40, 0.15);
 }
 
+.copyright-footer {
+	margin-top: 30px;
+	padding: 20px 0;
+	border-top: 1px solid #fff;
+}
+
+.copyright {
+	display: block;
+	text-align: center;
+	font-size: 12px;
+	color: rgba(17, 17, 17, 0.8);
+	letter-spacing: 0.2px;
+}
