--- a/CSS/board.css
+++ b/CSS/board.css
@@ -220,7 +220,7 @@
 
 /* 진행중 테두리 (중간) */
 .mid-color {
-	border: 1px solid #B8F2E4;
+	border: 1px solid #a9efdf;
 }
 
 .mid-color::before {
@@ -230,7 +230,7 @@
 	left: 0;
 	width: 5px;
 	height: 100%;
-	background: #B8F2E4;
+	background: #a9efdf;
 }
 
 /* 진행중 테두리 (낮음) */
